internal/buf/cmd/buf/testdata/workspace/success/nested/proto/buf.work
version: v1beta1
directories:
  - external
  - internal
