internal/buf/cmd/buf/testdata/workspace/fail/absolute/buf.work
version: v1beta1
directories:
  - /home/buf
